2nd update on index.html

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <nav>
                 <a href="#" class="logo">&lt;Dev<span>Ops</span>/&gt;</a>
                 <ul class="nav-links">
-                    <li><a href="#home">Hey</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#skills">Stack</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#contact">Contact</a></li>
